--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -1,1 +1,27 @@
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<title>Responsive Layout</title>
+<link rel = "stylesheet" href = "css\style.css">
+</head>
+
+<body>
+<h1>3 Recipes Great For Children</h1>
+<section class = one>
+  <h2 id = first>Pizza</h2>
+  <p>When the dough has risen, flatten it out on a lightly floured surface. Roll or stretch out into a 12 inch circle, and place on a baking pan. Sprinkle with oregano, mozzarella cheese, basil, Romano cheese and red pepper flakes. Bake for 12 to 15 minutes in the preheated oven, until the bottom of the crust is browned when you lift up the edge a little, and cheese is melted and bubbly. Serve and enjoy with the whole family for lunch or dinner!</p>
+</section>
+<section class = two>
+  <h2 id = second>Baked French Fries</h2>
+  <p>Place sliced potatoes in a colander; sprinkle sugar over potatoes. Set aside until liquid is released from potatoes. Mix potato slices, olive oil, garlic powder, salt, and black pepper in a resealable bag. Spread coated potato slices in a single layer on the prepared baking sheet. Bake in the preheated oven for 20 minutes; flip fries and continue baking until crisp and browned, about 20 more minutes. Cool for about 5 minutes before slicing and serving.</p>
+</section>
+<section class = three>
+  <h2 id = third>Strawberry Smoothie</h2>
+  <p>Gather the ingredients. Place the strawberries in the bottom of a blender or food processor fitted with a metal blade. Add the cranberry-raspberry juice and orange juice and top with vanilla yogurt. Cover and immediately puree until smooth, scraping down the sides if needed. Pour into glasses and garnish each with a strawberry. Serve immediately. Share and enjoy with the family on a hot Saturday afternoon!</p>
+</section>
+
+</body>
+</html>
 
